# ParallelComputing

./: README.md
BoundaryTask/: BoundaryTask.c  CMakeLists.txt  Graphic.py  README.md
GameOfLife/: .gitignore  CMakeLists.txt  README.md
GameOfLife/Examples/: Blinker.txt  Glider.txt  Pulsar.txt  Spaceship.txt
GameOfLife/include/: GameOfLife.h
GameOfLife/lib/: GameOfLife.c  HelpFuncs.c  ShowMesh.c  main.c
Integral/: Integral.cpp  README.md
ParallelizationOfCycles/: CMakeLists.txt  MPIProgram1.c  MPIProgramMPI.c  OpenMPProgram1.c  OpenMPProgramOpenMP.c  README.md  SequentialProgram1.c  SequentialProgramMPI.c  SequentialProgramOpenMP.c
Sudoku/: CMakeLists.txt  README.md
Sudoku/Examples/: sudoku16.json  sudoku25.json  sudoku9.json
Sudoku/include/: Sudoku.h
Sudoku/lib/: Sudoku.cpp  main.cpp
TransportEquation/: CMakeLists.txt  README.md  TransportEquation.c
